--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "class-variance-authority": "^0.7.1",
+    "downshift": "^9.0.8",
     "next": "14.2.18",
     "react": "^18",
     "react-dom": "^18",
