--- a/package.json
+++ b/package.json
@@ -9,13 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.5.1",
     "class-variance-authority": "^0.7.1",
     "downshift": "^9.0.8",
     "next": "14.2.18",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.54.2",
+    "react-redux": "^9.2.0",
     "react-youtube": "^10.1.0",
+    "redux": "^5.0.1",
     "tailwind-merge": "^2.6.0"
   },
   "devDependencies": {
