--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.5.1",
+    "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
     "downshift": "^9.0.8",
     "next": "14.2.18",
