refactor: LCP 이미지에 priority 추가

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "tailwind-merge": "^2.6.0"
   },
   "devDependencies": {
+    "@next/bundle-analyzer": "^15.2.4",
     "@svgr/webpack": "^8.1.0",
     "@types/node": "^20",
     "@types/react": "^18",
